--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -6181,6 +6181,10 @@ div.settings-note-inner-sec.setting-noti-sec-new {
 .notification-pg-list-wrap ul li:hover {
   box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08);
   background-color: #0081c50d;
+  /* background-color: #fff; */
+}
+.notification-pg-list-wrap ul li.un-read-notification {
+  background: #f4f4f4;
 }
 .notification-rm-wrap svg {
   cursor: pointer;
@@ -6382,6 +6386,9 @@ ul.notification-list-wrap li:first-child {
 ul.notification-list-wrap li:last-child {
   border-bottom: 0px;
   padding-bottom: 5px;
+}
+ul.notification-list-wrap li a {
+  transition: all 0s ease-in-out !important;
 }
 .notification-content-wrap {
   display: flex;
@@ -6776,4 +6783,16 @@ a.eg-close-btn {
 }
 .send-payment-ttile-wrap {
   padding-top: 20px;
+}
+/* CSS on 18-04 */
+button.notification-rm-wrap {
+  border: 0px !important;
+  background-color: transparent;
+  padding: 0px !important;
+}
+.invite-contact-modal .form-field p.text-danger {
+  padding-bottom: 0px !important;
+}
+.cu-details-wrap p {
+  word-wrap: break-word;
 }
