commit 0.1.0 added changes for notifications, send-payment API params, other fixes 19-april-2023

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -6387,7 +6387,7 @@ ul.notification-list-wrap li:last-child {
   border-bottom: 0px;
   padding-bottom: 5px;
 }
-ul.notification-list-wrap li a {
+ul.notification-list-wrap li > div {
   transition: all 0s ease-in-out !important;
 }
 .notification-content-wrap {
