commit 0.1.0 added changes for notifications, styles and others 20-April-2023

--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -3813,8 +3813,12 @@
   .con-modal-rm-wrap a {
     font-size: 18px;
   }
-  .notification-pg-list-wrap .notification-pcw {
+  /* .notification-pg-list-wrap .notification-pcw {
     width: calc(100% - 30px);
+    padding-right: 15px;
+  } */
+  .notification-pg-list-wrap div.w-100 {
+    width: calc(100% - 30px) !important;
     padding-right: 15px;
   }
   .notification-rm-wrap svg {
@@ -3982,6 +3986,9 @@
   }
   .one-time-pay-wrap .amount > span {
     padding-right: 5px;
+  }
+  .notification-top-sec .pr-4 .btn {
+    padding: 12px 20px;
   }
 }
 @media only screen and (max-width: 575px) {
@@ -4217,6 +4224,16 @@
   .resend-otp-wrap {
     margin-bottom: 20px;
   }
+  .notification-list-sec .notification-top-sec {
+    display: block !important;
+  }
+  .notification-top-sec .title-content-wrap {
+    padding-right: 0px;
+    padding-bottom: 15px;
+  }
+  /* .notification-top-sec .pr-4 .btn{
+    min-width: 110px;
+  } */
 }
 @media only screen and (max-width: 480px) {
   /* .profile-inner-sec.p-4 {
@@ -4261,7 +4278,8 @@
   .notification-dd-wrap {
     min-width: calc(100% - 40px);
     margin: auto;
-    top: 80px;
+    /* top: 80px; */
+    top: 50px;
     left: 10px;
     right: 20px;
     border-top-right-radius: 11px;
