--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -6858,7 +6858,8 @@ button.notification-rm-wrap {
 .notification-pg-list-wrap span.noti-time {
   font-size: 11px !important;
   line-height: 11px;
-  margin-bottom: 8px;
+  margin-bottom: 0px;
+  margin-top: 5px;
 }
 /* CSS for Delete Account butotn */
 .profile-del-acc-btn button.btn {
